cmake_minimum_required(VERSION 3.10)
project(LBM_CPP)
include(CTest)
enable_testing()
set(gtest_disable_pthreads ON)
include(../modules/DownloadProject.cmake)
if (NOT CYGWIN)
    set(CMAKE_CXX_EXTENSIONS ON)
    message("Extensions: ${CMAKE_CXX_EXTENSIONS}")
endif ()
download_project(PROJ googletest GIT_REPOSITORY https://github.com/google/googletest.git GIT_TAG master UPDATE_DISCONNECTED 1)
add_subdirectory(${googletest_SOURCE_DIR} ${googletest_BINARY_DIR})
set(test_sources gtests.cpp)
add_executable(run_tests ${test_sources})
target_link_libraries(run_tests gtest gmock)
add_test(run_tests run_tests)
